k8s/kube-news/ingress/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-kubenews
  namespace: kube-news
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - http:
      paths:
      - path: /kubenews
        pathType: Prefix
        backend:
          service:
            name: kubenews
            port: 
              number: 80
